# minimal_pa2026_for_aws

./: CMakeLists.txt  README.md  best_model.onnx  best_model.onnx.data  main.cpp
